--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flex_color_scheme: ^6.1.2
   flutter_svg: ^2.0.2
   cloud_firestore: ^4.4.3
+  firebase_auth: ^4.2.9
 
 dev_dependencies:
   flutter_test:
